# webserver

./: .gitignore  Cargo.toml  README.md  dockerfile  entrypoint.sh
.github/workflows/: main.yml  master_nikiesboldi.yml  master_rust-webserver.yml  test.yml
assets/: favico.xcf
assets/neptunCRF/: cfg.json
pages/: NeptunCRF.html  neptun_fos.html
pages/en/: 404.html  dev.html  host_not_provided.html  neptunCRF.html
pages/en/neptunCRF/: EULA.html  neptunCRF.html
pages/hu/: 404.html  hello.html  neptunCRF.html
pages/hu/neptunCRF/: EULA.html  neptunCRF.html
pages/hu/wedding/: app.js  bhj.html  encoded.txt  style.css  test.html  wedding.html  wedding.min.html
pages/hu/wedding_test/: wedding.html
pages/src/: App.vue
pages/src/components/: HelloWorld.vue
pages/vue/: package.json  vite.config.ts
pages/vue/src/: App.vue  main.ts
pages/vue/src/components/: HelloWorld.vue
src/: Chainlog.md  dev.rs  encription.rs  extensions.rs  hash.rs  lib.rs  main.rs  users.json
src/neptunCRF/: encription.rs  hash.rs  mod.rs  routing.rs
src/routing/: handling.rs  mod.rs  routing.rs
src/server_functions/: debug.rs  handling.rs  headers.rs  http_verison.rs  method.rs  mod.rs  payload.rs  request.rs  response.rs  response_payload.rs  routing.rs  status_code.rs  status_codes.rs  thread.rs
src/vue/: mod.rs
src/wedding/: mod.rs
src/wedding/request/: form.rs
