[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
html-macro = "0.2.2"
json = "0.12.4"
phf = { version = "0.11.2", features = ["macros"] }
ripemd = "0.1.3"
ripemd160 = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
warp = "0.3.5"
