[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
ripemd = "0.1.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
terminal_colors = { git = "https://github.com/ligvigfui/terminal-colors" }
